# zstdR

./: DESCRIPTION  LICENSE  Makefile  NAMESPACE  configure  configure.ac
R/: RcppExports.R  zstdR.R
man/: zstdR-package.Rd  zstdR.Rd
src/: Makevars.in  Makevars.mk  Makevars.win  RcppExports.cpp  interface_zstd.cpp  symbols.rds
